[package]
name = "recorder-backend-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.63" #Because of sched_trigger/mod.rs:3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4.0"
env_logger = "~0.9.0"

mirakurun_client = { path = "../mirakurun_client" }
meilisearch-sdk = { path = "../../meilisearch-sdk" }

axum = "^0.5.15"
chrono = {version = "^0.4", features = ["clock"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal"] }
tokio-stream = "~0.1"
pin-project-lite = "0.2.9"
ulid = "^1.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[profile.release]
lto = true