[package]
name = "recorder-backend-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.63" #Because of sched_trigger/mod.rs:3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyring = "1.2.0"
log = "~0.4.0"
env_logger = "~0.9.0"
structopt = "0.3.26"

mirakurun_client = { path = "../mirakurun_client" }
meilisearch-sdk = "0.20.1"

axum = "^0.5"
chrono = {version = "^0.4", features = ["clock"], default-features = false }
futures-util = "^0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal"] }
tokio-stream = { version = "~0.1", features = ["io-util"], default-features = false  }
tokio-util = { version = "~0.7", features = ["io"], default-features = false }
pin-project-lite = "0.2.9"
ulid = "^1.0"

serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"


[profile.release]
lto = true